--- a/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasALQUILER/VdevolverPorAlquiler.fxml
+++ b/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasALQUILER/VdevolverPorAlquiler.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="400.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresALQUILER.VdevolverPorAlquiler">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="400.0" spacing="10.0" style="-fx-background-color: #6699cc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresALQUILER.VdevolverPorAlquiler">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
             <Label fx:id="lblDNIoMatricula" layoutX="21.0" layoutY="50.0" text="DNI del cliente que devuelve: " />
             <TextField fx:id="tfDNIoMatriculaDevolver" layoutX="208.0" layoutY="46.0" />
             <Button fx:id="btAceptarYdevolver" layoutX="69.0" layoutY="119.0" mnemonicParsing="false" onAction="#devolverAlquiler" text="Aceptar y Devolver" />
-            <Label layoutX="20.0" layoutY="80.0" text="Fecha de alquiler del vehiculo:" />
+            <Label fx:id="lblFechaAlquiler" layoutX="20.0" layoutY="80.0" text="Fecha de alquiler del vehiculo:" />
             <DatePicker fx:id="dpFechaDevolucion" layoutX="185.0" layoutY="76.0" promptText="Seleccionar fecha" />
             <Button fx:id="btCancelar" layoutX="267.0" layoutY="119.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
             <Label layoutX="64.0" layoutY="21.0" text="Devolver por:" />
