--- a/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasALQUILER/VtablaAlquileres.fxml
+++ b/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasALQUILER/VtablaAlquileres.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="900.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresALQUILER.VtablaAlquileres">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="900.0" spacing="20.0" style="-fx-background-color: #6699cc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresALQUILER.VtablaAlquileres">
    <children>
       <AnchorPane prefHeight="404.0" prefWidth="600.0">
          <children>
