--- a/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasALQUILER/vBuscarAlquiler.fxml
+++ b/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasALQUILER/vBuscarAlquiler.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="440.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresALQUILER.vBuscarAlquiler">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="440.0" spacing="10.0" style="-fx-background-color: #6699cc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresALQUILER.vBuscarAlquiler">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="420.0">
          <children>
