--- a/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasVEHICULO/vBuscarVehiculo.fxml
+++ b/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasVEHICULO/vBuscarVehiculo.fxml
@@ -7,12 +7,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="144.0" prefWidth="440.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresVEHICULO.vBuscarVehiculo">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="144.0" prefWidth="440.0" spacing="10.0" style="-fx-background-color: #6699cc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresVEHICULO.vBuscarVehiculo">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Label layoutX="14.0" layoutY="55.0" text="Matricula del vehiculo a buscar: " />
-            <TextField fx:id="tfMatriculaVehiculoBuscar" layoutX="184.0" layoutY="51.0" />
+            <Label layoutX="50.0" layoutY="53.0" text="Matricula del vehiculo a buscar: " />
+            <TextField fx:id="tfMatriculaVehiculoBuscar" layoutX="220.0" layoutY="49.0" />
             <Button fx:id="btBuscar" layoutX="132.0" layoutY="88.0" mnemonicParsing="false" onAction="#buscarVehiculoPorMatricula" text="Buscar" />
             <Button fx:id="btCancelar" layoutX="259.0" layoutY="88.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
          </children>
