--- a/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasVEHICULO/vEliminarVehiculo.fxml
+++ b/src/main/java/org/iesalandalus/programacion/alquilervehiculos/vista/grafica/recursos/vistas/vistasVEHICULO/vEliminarVehiculo.fxml
@@ -7,12 +7,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="144.0" prefWidth="440.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresVEHICULO.vEliminarVehiculo">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="144.0" prefWidth="440.0" spacing="10.0" style="-fx-background-color: #6699cc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.alquilervehiculos.vista.grafica.controladores.controladoresVEHICULO.vEliminarVehiculo">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Label layoutX="14.0" layoutY="55.0" text="Matricula del Vehiculo a eliminar: " />
-            <TextField fx:id="tfMatriculaVehiculoEliminar" layoutX="193.0" layoutY="51.0" />
+            <Label layoutX="46.0" layoutY="40.0" text="Matricula del Vehiculo a eliminar: " />
+            <TextField fx:id="tfMatriculaVehiculoEliminar" layoutX="225.0" layoutY="36.0" />
             <Button fx:id="btAceptarEliminar" layoutX="104.0" layoutY="88.0" mnemonicParsing="false" onAction="#eliminarVehiculoPorMatricula" text="Aceptar y Eliminar" />
             <Button fx:id="btCancelar" layoutX="281.0" layoutY="88.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
          </children>
